# thesis-project

./: .gitignore  README.md  experiments_manifest.json  pyproject.toml  run_experiments.py
experiments/Experiment00/: advanced.py
experiments/Experiment01/: advanced.py  basic.py
experiments/Experiment02/: advanced.py  basic.py
experiments/Experiment03/: advanced.py  basic.py
experiments/Experiment04/: advanced.py  basic.py
experiments/Experiment05/: advanced.py  basic.py
experiments/Experiment06/: advanced.py  basic.py
experiments/Experiment07/: advanced.py  basic.py
experiments/Experiment08/: advanced.py  basic.py
experiments/Experiment09/: advanced.py  basic.py
experiments/Experiment10/: advanced.py  basic.py
experiments/Experiment11/: advanced.py  basic.py
experiments/Experiment12/: advanced.py  basic.py
results/: experiments-results-template.xlsx
tests/: _shared.py
tests/Experiment01/: test_solution.py
tests/Experiment02/: test_solution.py
tests/Experiment03/: test_solution.py
tests/Experiment04/: test_solution.py
tests/Experiment05/: test_solution.py
tests/Experiment06/: test_solution.py
tests/Experiment07/: test_solution.py
tests/Experiment09/: test_solution.py
tests/Experiment10/: test_solution.py
tests/Experiment11/: test_numbers.txt  test_solution.py
tests/Experiment12/: test_solution.py
tests/experiment08/: test_solution.py
