[project]
name = "thesis-project"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
pretty = true
